trying to fix resizing issues on mobile
-added CSS resettrying to fix resizing issues on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -4,6 +4,29 @@
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */
 
+
+/*CSS reset
+Is a short set of CSS rules that resets the styling of all HTML elements to a consistent baseline so the website will look the same on all browsers
+*/
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    /*The box-sizing property is used to tell the browser what the sizing properties (width and height) should include border-box.*/
+    box-sizing: border-box;
+    /*reset Chrome user agent styles*/
+    -webkit-margin-before: 0px;
+    -webkit-margin-after: 0px;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-before: 0px;
+    -webkit-padding-after: 0px;
+    -webkit-padding-start: 0px;
+    -webkit-padding-end: 0px;
+}
+
 html,
 body {
     height: 100%;
@@ -36,6 +59,14 @@ hr {
 
 hr.light {
     border-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+}
+
+hr.header-break {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a {
@@ -242,7 +273,7 @@ header .header-content .header-content-inner p {
 
 .section-heading {
     margin-top: 0;
-    margin-bottom: 2em;
+    margin-bottom: 0.5em;
 }
 
 .service-box {
